[package]
name = "coot"
version = "0.1.0"
authors = ["Tom Milligan <tom@reinfer.io>"]
edition = "2018"

[dependencies]
co2mon = { version = "2.0.3", default-features = false, features = ["linux-shared-libusb"] }
config = { version = "0.10.1", default-features = false, features = ["yaml"] }
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.54"
log = "0.4.8"
env_logger = "0.7.1"
snafu = "0.6.7"
reqwest = { version = "0.10.4", features = ["blocking", "native-tls-vendored"] }
